# deploy_this

./: .gitignore  Cargo.toml  README.md  example.dplt.toml  example.dplyt.toml
.github/workflows/: release.yml
src/: cli_commands.rs  config_file.rs  helper.rs  main.rs
src/helper/: check_version.rs  files.rs  interactive_cli.rs  mod.rs  s3.rs
src/route/: get.rs  init.rs  mod.rs  publish.rs  the_config_file.rs  update.rs
