[package]
name = "deploy_this"
version = "0.5.1"
edition = "2021"

[[bin]]
name = "dplyt"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-creds = "0.30.0" # DO NOT UPGRADE TO 0.34.0
base64 = "0.21.0"
clap = { version = "4.1.6", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
rust-s3 = { version = "0.32.3", features = ["sync-native-tls"], default-features = false }
rustyline = "11.0.0"
semver = "1.0.16"
serde = "1.0.152"
serde_derive = "1.0.152"
sha2 = "0.10.6"
toml = "0.7.2"
